--- a/ZomBot/ZomBot.csproj
+++ b/ZomBot/ZomBot.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Commands\Warn.cs" />
     <Compile Include="Commands\WhoIs.cs" />
     <Compile Include="Data\Config.cs" />
+    <Compile Include="Data\GameLog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Accounts.cs" />
