--- a/ZomBot/ZomBot.csproj
+++ b/ZomBot/ZomBot.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Commands\Status.cs" />
     <Compile Include="Commands\Warn.cs" />
     <Compile Include="Commands\WhoIs.cs" />
+    <Compile Include="Data\ChatLog.cs" />
     <Compile Include="Data\Config.cs" />
     <Compile Include="Data\GameLog.cs" />
     <Compile Include="Program.cs" />
